--- a/GullyTrends/Base.lproj/Main.storyboard
+++ b/GullyTrends/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-icons" translatesAutoresizingMaskIntoConstraints="NO" id="0jj-69-nuG">
-                                <rect key="frame" x="0.0" y="44" width="375" height="657.00000000000011"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="657"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="hbC-sK-YYg">
                                 <rect key="frame" x="62.5" y="155" width="250" height="100"/>
@@ -241,7 +241,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tTg-io-wen">
-                                <rect key="frame" x="280.5" y="627" width="58.5" height="22"/>
+                                <rect key="frame" x="267" y="619" width="72" height="30"/>
                                 <state key="normal" title="  Skip" image="skip-icon"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QKw-uP-Noc">
@@ -376,24 +376,55 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fWo-U0-bQH">
-                                <rect key="frame" x="0.0" y="132" width="414" height="764"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="ZHp-3M-IGO">
+                                <rect key="frame" x="0.0" y="44" width="375" height="40"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="lzX-Ll-jMZ"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fWo-U0-bQH">
+                                <rect key="frame" x="0.0" y="84" width="375" height="583"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCell" rowHeight="230" id="7kZ-y8-Trw">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="230"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyCell" rowHeight="146" id="7kZ-y8-Trw">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="146"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7kZ-y8-Trw" id="Ce6-51-tt2">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="230"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="146"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pB4-0q-uyV">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="230"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Iy-RE-W3o" customClass="CustomView">
+                                                    <rect key="frame" x="15" y="15" width="345" height="116"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Unisexgarments" translatesAutoresizingMaskIntoConstraints="NO" id="6cy-vK-u3G">
+                                                            <rect key="frame" x="0.0" y="0.0" width="345" height="116"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="6cy-vK-u3G" secondAttribute="trailing" id="7nb-bi-aQW"/>
+                                                        <constraint firstItem="6cy-vK-u3G" firstAttribute="leading" secondItem="5Iy-RE-W3o" secondAttribute="leading" id="Ddh-pY-t6s"/>
+                                                        <constraint firstAttribute="bottom" secondItem="6cy-vK-u3G" secondAttribute="bottom" id="EXW-DH-KzO"/>
+                                                        <constraint firstItem="6cy-vK-u3G" firstAttribute="top" secondItem="5Iy-RE-W3o" secondAttribute="top" id="qTt-zb-6Wi"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="10"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
                                             </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="5Iy-RE-W3o" firstAttribute="top" secondItem="Ce6-51-tt2" secondAttribute="top" constant="15" id="IF7-Ew-Eyk"/>
+                                                <constraint firstAttribute="trailing" secondItem="5Iy-RE-W3o" secondAttribute="trailing" constant="15" id="eeF-T0-k7n"/>
+                                                <constraint firstAttribute="bottom" secondItem="5Iy-RE-W3o" secondAttribute="bottom" constant="15" id="gE1-jg-TE3"/>
+                                                <constraint firstItem="5Iy-RE-W3o" firstAttribute="leading" secondItem="Ce6-51-tt2" secondAttribute="leading" constant="15" id="yGM-wP-6FU"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -401,14 +432,17 @@
                                     <outlet property="delegate" destination="Z2I-Sz-A3d" id="bdL-fc-FG0"/>
                                 </connections>
                             </tableView>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZHp-3M-IGO">
-                                <rect key="frame" x="0.0" y="88" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ZHp-3M-IGO" secondAttribute="trailing" id="2sa-ZI-FD1"/>
+                            <constraint firstItem="fWo-U0-bQH" firstAttribute="top" secondItem="ZHp-3M-IGO" secondAttribute="bottom" id="BrA-xp-ekE"/>
+                            <constraint firstItem="fWo-U0-bQH" firstAttribute="leading" secondItem="Iwm-zD-viH" secondAttribute="leading" id="H6y-Hs-uBp"/>
+                            <constraint firstItem="X92-Ax-75B" firstAttribute="top" secondItem="fWo-U0-bQH" secondAttribute="bottom" id="o6u-v6-Da2"/>
+                            <constraint firstAttribute="trailing" secondItem="fWo-U0-bQH" secondAttribute="trailing" id="u5F-3l-RXf"/>
+                            <constraint firstItem="ZHp-3M-IGO" firstAttribute="leading" secondItem="Iwm-zD-viH" secondAttribute="leading" id="vAe-HF-knu"/>
+                            <constraint firstItem="ZHp-3M-IGO" firstAttribute="top" secondItem="RX0-GO-ibe" secondAttribute="bottom" id="zoJ-fM-sJ3"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="PL4-ln-Z8C">
                         <barButtonItem key="leftBarButtonItem" image="menu-icon" id="DJB-Dc-VO5">
@@ -430,7 +464,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gWP-sa-Vux" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2198.5507246376815" y="677.67857142857144"/>
+            <point key="canvasLocation" x="2197.5999999999999" y="676.91154422788611"/>
         </scene>
         <!--Menu View Controller-->
         <scene sceneID="EDl-71-Ti2">
@@ -573,14 +607,15 @@
     </scenes>
     <resources>
         <image name="AR-icon" width="146.5" height="225"/>
+        <image name="Unisexgarments" width="980" height="472"/>
         <image name="bg-icons" width="320" height="569"/>
-        <image name="cart-icon" width="17" height="20.5"/>
+        <image name="cart-icon" width="18.5" height="23"/>
         <image name="checked.png" width="24.5" height="24.5"/>
         <image name="fb-btn" width="109" height="56"/>
         <image name="get-your-sizes-btn" width="194" height="48"/>
         <image name="girl" width="42" height="42"/>
         <image name="google-btn" width="110" height="56"/>
-        <image name="logo" width="90.5" height="44"/>
+        <image name="logo" width="190.5" height="90.5"/>
         <image name="menu" width="22" height="22"/>
         <image name="menu-icon" width="22" height="15"/>
         <image name="menu_cart-icon" width="18.5" height="23"/>
