--- a/GullyTrends/Base.lproj/Main.storyboard
+++ b/GullyTrends/Base.lproj/Main.storyboard
@@ -242,7 +242,7 @@
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Get Your Sizes" backgroundImage="get-your-sizes-btn"/>
                                 <connections>
-                                    <segue destination="vXZ-lx-hvc" kind="push" id="o60-12-jUd"/>
+                                    <action selector="launchCamera:" destination="5Y3-1T-yqh" eventType="touchUpInside" id="Nyy-4f-uFP"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accept terms and Conditions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dah-Xr-D2x">
@@ -253,6 +253,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tTg-io-wen">
                                 <rect key="frame" x="267" y="619" width="72" height="30"/>
                                 <state key="normal" title="  Skip" image="skip-icon"/>
+                                <connections>
+                                    <segue destination="vXZ-lx-hvc" kind="push" id="gV8-P3-eCK"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QKw-uP-Noc">
                                 <rect key="frame" x="77" y="492" width="30" height="30"/>
@@ -430,6 +433,9 @@
                                             <constraint firstAttribute="width" constant="40" id="vqb-Mu-LVi"/>
                                         </constraints>
                                         <state key="normal" backgroundImage="wishlist-icon"/>
+                                        <connections>
+                                            <segue destination="y9p-Js-qv1" kind="push" id="k9A-i2-lxE"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fZh-7i-wlW">
                                         <rect key="frame" x="129" y="11" width="40" height="38.5"/>
@@ -447,6 +453,9 @@
                                             <constraint firstAttribute="width" constant="40" id="j1g-uB-hXH"/>
                                         </constraints>
                                         <state key="normal" backgroundImage="cart-bag-icon"/>
+                                        <connections>
+                                            <segue destination="U8B-gV-0pb" kind="push" id="dbB-YF-GQg"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UE0-po-i1b">
                                         <rect key="frame" x="239" y="10" width="40" height="40"/>
@@ -2026,9 +2035,6 @@
                                                 <integer key="value" value="25"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <segue destination="y9p-Js-qv1" kind="push" id="M4e-pS-Vct"/>
-                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -2085,11 +2091,11 @@
             <objects>
                 <viewController storyboardIdentifier="MyOrdersViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="UeG-1R-qnw" customClass="MyOrdersViewController" customModule="GullyTrends" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rqg-SK-5K9">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ygT-Pl-K6C">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N26-Lj-HOp">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
@@ -2144,7 +2150,7 @@
                                         </constraints>
                                     </view>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pfl-Gc-6Pz">
-                                        <rect key="frame" x="0.0" y="102" width="375" height="467"/>
+                                        <rect key="frame" x="0.0" y="102" width="375" height="511"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7XC-fB-NFB">
                                             <size key="itemSize" width="392" height="171"/>
@@ -2323,7 +2329,7 @@
                                         </connections>
                                     </collectionView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3wO-iE-xq7">
-                                        <rect key="frame" x="30" y="573" width="315" height="50"/>
+                                        <rect key="frame" x="30" y="617" width="315" height="50"/>
                                         <color key="backgroundColor" red="0.28627450980000002" green="0.0" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="76Q-MH-ES0"/>
@@ -2392,11 +2398,11 @@
             <objects>
                 <viewController storyboardIdentifier="WishlistViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="y9p-Js-qv1" customClass="WishlistViewController" customModule="GullyTrends" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Fr7-LH-iUG">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KFf-Gq-Kws">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="623"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ciL-Zo-u10">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
@@ -2910,7 +2916,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="UeG-1R-qnw" kind="push" id="KPR-Dv-fOR"/>
+                                    <segue destination="U8B-gV-0pb" kind="push" id="ZrA-Mr-2Vp"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -2942,7 +2948,7 @@
         <image name="bg-icons" width="320" height="569"/>
         <image name="book-tailor" width="27" height="22.5"/>
         <image name="cart-bag-icon" width="19" height="22.5"/>
-        <image name="cart-icon" width="17" height="20.5"/>
+        <image name="cart-icon" width="18.5" height="23"/>
         <image name="checked.png" width="24.5" height="24.5"/>
         <image name="fb-btn" width="109" height="56"/>
         <image name="filter-icon" width="14" height="9"/>
@@ -2950,7 +2956,7 @@
         <image name="girl" width="42" height="42"/>
         <image name="google-btn" width="110" height="56"/>
         <image name="location-icon" width="13.5" height="19"/>
-        <image name="logo" width="142" height="68"/>
+        <image name="logo" width="90.5" height="44"/>
         <image name="love-icon" width="13.5" height="12"/>
         <image name="magnifyingglass" catalog="system" width="64" height="60"/>
         <image name="menu" width="22" height="22"/>
@@ -2970,4 +2976,7 @@
         <image name="user-icon" width="18" height="22.5"/>
         <image name="wishlist-icon" width="20" height="18.5"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="ZrA-Mr-2Vp"/>
+    </inferredMetricsTieBreakers>
 </document>
